--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,17 @@ a:hover {
 .content ul {
   @apply my-6;
 }
+
+.bg{
+  z-index: -1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 50%, rgba(154,183,243,1) 100%);
+}
+
+
+html, body {
+  width: 100vw !important;
+}
