--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,3 +37,14 @@ html, body {
 .katex-html{
   display: none;
 }
+
+.es .after-icon:after {
+  display: inline-block;
+  margin-left: .255em;
+  vertical-align: .255em;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent;
+}
