--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 
 a {
@@ -32,6 +33,7 @@ a:hover {
 
 html, body {
   width: 100vw !important;
+  @apply font-sans;
 }
 
 .katex-html{
@@ -47,4 +49,8 @@ html, body {
   border-right: .3em solid transparent;
   border-bottom: 0;
   border-left: .3em solid transparent;
+}
+
+* {
+  @apply font-sans;
 }
