--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 
 a {
@@ -21,33 +20,37 @@ a:hover {
   @apply my-6;
 }
 
-.syscom .bg{
+.syscom .bg {
   z-index: -20;
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgb(255,255,255);
-  background: linear-gradient(180deg, rgba(255,255,255,1) 50%, rgba(154,183,243,1) 100%);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(154, 183, 243, 1) 100%
+  );
 }
 
-
-html, body {
+html,
+body {
   width: 100vw !important;
   @apply font-sans;
 }
 
 .es .after-icon:after {
   display: inline-block;
-  margin-left: .255em;
-  vertical-align: .255em;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
   content: "";
-  border-top: .3em solid;
-  border-right: .3em solid transparent;
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
   border-bottom: 0;
-  border-left: .3em solid transparent;
+  border-left: 0.3em solid transparent;
 }
 
-a.no-b{
+a.no-b {
   border-bottom: 0;
 }
 
