--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -2,7 +2,7 @@
   pre {
     overflow-x: auto;
   }
-  
+
   /**
    * Inspired by gatsby remark prism - https://www.gatsbyjs.com/plugins/gatsby-remark-prismjs/
    * 1. Make the element just wide enough to fit its content.
@@ -12,7 +12,7 @@
     float: left; /* 1 */
     min-width: 100%; /* 2 */
   }
-  
+
   .code-line {
     display: block;
     padding-left: 16px;
@@ -21,22 +21,22 @@
     margin-right: -16px;
     border-left: 4px solid rgba(0, 0, 0, 0); /* Set placeholder for highlight accent border color to transparent */
   }
-  
+
   .code-line.inserted {
     background-color: rgba(16, 185, 129, 0.2); /* Set inserted line (+) color */
   }
-  
+
   .code-line.deleted {
     background-color: rgba(239, 68, 68, 0.2); /* Set deleted line (-) color */
   }
-  
+
   .highlight-line {
     margin-left: -16px;
     margin-right: -16px;
     background-color: rgba(55, 65, 81, 0.5); /* Set highlight bg color */
     border-left: 4px solid rgb(59, 130, 246); /* Set highlight accent border color */
   }
-  
+
   .line-number::before {
     display: inline-block;
     width: 1rem;
@@ -48,109 +48,113 @@
   }
 }
 
-.es, .scil {
-
+.es,
+.scil {
   .markdown {
-
-    h1{
+    h1 {
       font-size: 1.55rem;
       font-weight: 700;
       border-bottom: 1px solid #222;
       margin: 1rem 0.5rem;
     }
-    
-    h2{
+
+    h2 {
       font-size: 1.4rem;
       font-weight: 600;
       border-bottom: 1px solid #ccc;
       margin: 0.75rem 0;
     }
-    
+
     h3 {
       @apply font-medium border-b-1 border-[#ccc] mt-6 mb-2 text-xl;
     }
-    
+
     ul {
       list-style: disc;
       margin-left: 1.5rem;
     }
-    
+
     ol {
       list-style: decimal;
       margin-left: 1.5rem;
     }
-    
-    p, li {
+
+    p,
+    li {
       @apply my-2 font-roboto;
     }
-    
-    
-    ul ul, ol ol, ul ol, ol ul {
+
+    ul ul,
+    ol ol,
+    ul ol,
+    ol ul {
       @apply mx-4 my-2;
     }
-    
+
     .small {
       font-size: 12px;
     }
-    
+
     iframe {
       width: 100%;
       height: 100%;
       aspect-ratio: 16/9;
     }
-    
+
     iframe.custom-aspect {
       width: 100%;
       height: unset;
       aspect-ratio: unset;
     }
-    
+
     .hint.tip {
       @apply bg-green-600 px-4 py-2 rounded-md border-[1px] border-green-500 text-white;
     }
-    
+
     .hint.warn {
       @apply bg-yellow-300 px-4 py-2 rounded-md border-[1px] border-yellow-500;
     }
-    
+
     .hint.error {
       @apply bg-red-600 px-4 py-2 rounded-md border-[1px] border-red-700 text-white;
     }
-    
+
     blockquote {
       @apply bg-gray-300 pl-4 py-1 my-1 rounded-md border-[1px] border-gray-500;
     }
-    
-    thead{
+
+    thead {
       display: table-header-group;
       vertical-align: middle;
     }
-    
-    thead th, thead td {
+
+    thead th,
+    thead td {
       font: sans-serif;
       font-weight: 500;
     }
-    
+
     tr {
       border-color: #586069;
       border-top: 1px solid #d1d5da;
     }
-    
-    th, td {
+
+    th,
+    td {
       border: 1px solid #d1d5da;
-      padding: .4em .8em;
+      padding: 0.4em 0.8em;
     }
-    
+
     tbody {
       display: table-row-group;
       vertical-align: middle;
     }
-    
+
     tbody tr {
       font-size: 1rem;
       font-family: "Times New Roman", serif;
     }
-    
+
     .center {
       text-align: center;
       display: flex;
@@ -158,8 +162,9 @@
       align-items: center;
     }
 
-    li code, p code {
-      @apply bg-gray-200 px-2 py-1 rounded
+    li code,
+    p code {
+      @apply bg-gray-200 px-2 py-1 rounded;
     }
 
     .centerImg {
@@ -169,109 +174,114 @@
 }
 
 .syscom {
-  .markdown{
-
-    h1{
+  .markdown {
+    h1 {
       font-size: 1.55rem;
       font-weight: 700;
       border-bottom: 1px solid #222;
       margin: 1.5rem 0.5rem;
     }
-    
-    h2{
+
+    h2 {
       font-size: 1.4rem;
       font-weight: 600;
       border-bottom: 1px solid #ccc;
     }
-    
+
     h3 {
       font-size: 1.25rem;
       font-weight: 500;
       border-bottom: 1px solid #ccc;
     }
-    
+
     ul {
       list-style: disc;
       margin-left: 1.5rem;
     }
-    
+
     ol {
       list-style: decimal;
       margin-left: 1.5rem;
     }
-    
-    .syscom p,.syscom li {
+
+    .syscom p,
+    .syscom li {
       font-size: 1rem;
       margin: 0.5rem 0;
       font-family: "Times New Roman", serif;
     }
-      
-    ul ul, ol ol, ul ol, ol ul {
+
+    ul ul,
+    ol ol,
+    ul ol,
+    ol ul {
       @apply mx-4 my-2;
     }
-    
+
     .small {
       font-size: 12px;
     }
-    
+
     iframe {
       width: 100%;
       height: 100%;
       aspect-ratio: 16/9;
     }
-    
+
     iframe.custom-aspect {
       width: 100%;
       height: unset;
       aspect-ratio: unset;
     }
-    
+
     .hint.tip {
       @apply bg-green-600 px-4 py-2 rounded-md border-[1px] border-green-500 text-white;
     }
-    
+
     .hint.warn {
       @apply bg-yellow-300 px-4 py-2 rounded-md border-[1px] border-yellow-500;
     }
-    
+
     .hint.error {
       @apply bg-red-600 px-4 py-2 rounded-md border-[1px] border-red-700 text-white;
     }
-    
+
     blockquote {
       @apply bg-gray-300 pl-4 py-1 my-1 rounded-md border-[1px] border-gray-500;
     }
-    
-    thead{
+
+    thead {
       display: table-header-group;
       vertical-align: middle;
     }
-    
-    thead th, thead td {
+
+    thead th,
+    thead td {
       font: sans-serif;
       font-weight: 500;
     }
-    
+
     tr {
       border-color: #586069;
       border-top: 1px solid #d1d5da;
     }
-    
-    th, td {
+
+    th,
+    td {
       border: 1px solid #d1d5da;
-      padding: .4em .8em;
+      padding: 0.4em 0.8em;
     }
-    
+
     tbody {
       display: table-row-group;
       vertical-align: middle;
     }
-    
+
     tbody tr {
       font-size: 1rem;
       font-family: "Times New Roman", serif;
     }
-    
+
     .center {
       text-align: center;
       display: flex;
@@ -279,8 +289,9 @@
       align-items: center;
     }
 
-    li code, p code {
-      @apply bg-[#eee] px-1 py-1
+    li code,
+    p code {
+      @apply bg-[#eee] px-1 py-1;
     }
   }
 }
