--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -164,7 +164,7 @@
 
     li code,
     p code {
-      @apply bg-gray-200 px-2 py-1 rounded;
+      @apply px-2 py-1 rounded;
     }
 
     .centerImg {
