--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,25 +1,65 @@
 .markdown h1 {
-  @apply text-4xl scroll-m-20 font-semibold tracking-tight lg:text-5xl;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  scroll-margin-top: 5rem;
+  font-weight: 600;
+  letter-spacing: -0.025em;
+}
+
+@media (min-width: 1024px) {
+  .markdown h1 {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 .markdown h2 {
-  @apply mt-10 scroll-m-20 border-b pb-2 text-3xl font-medium tracking-tight transition-colors first:mt-0;
+  margin-top: 2.5rem;
+  scroll-margin-top: 5rem;
+  border-bottom-width: 1px;
+  padding-bottom: 0.5rem;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 500;
+  letter-spacing: -0.025em;
+  transition-property:
+    color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.markdown h2:first-child {
+  margin-top: 0;
 }
 
 .markdown h3 {
-  @apply mt-8 scroll-m-20 text-2xl font-medium tracking-tight;
+  margin-top: 2rem;
+  scroll-margin-top: 5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 500;
+  letter-spacing: -0.025em;
 }
 
 .markdown p {
-  @apply leading-7 [&:not(:first-child)]:mt-6;
+  line-height: 1.75rem;
 }
 
-.markdown ul {
-  @apply my-6 ml-6 list-disc [&>li]:mt-2;
+.markdown p:not(:first-child) {
+  margin-top: 1.5rem;
 }
 
+.markdown ul,
 .markdown ol {
-  @apply my-6 ml-6 list-disc [&>li]:mt-2;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 1.5rem;
+  list-style-type: disc;
+}
+
+.markdown ul > li,
+.markdown ol > li {
+  margin-top: 0.5rem;
 }
 
 .markdown pre {
@@ -83,19 +123,50 @@
 }
 
 .markdown .hint.tip {
-  @apply bg-green-600 px-4 py-2 rounded-md border-[1px] border-green-500 text-white;
+  background-color: rgb(22, 163, 74);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: rgb(34, 197, 94);
+  color: white;
 }
 
 .markdown .hint.warn {
-  @apply bg-yellow-300 px-4 py-2 rounded-md border-[1px] border-yellow-500;
+  background-color: rgb(253, 224, 71);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: rgb(234, 179, 8);
 }
 
 .markdown .hint.error {
-  @apply bg-red-600 px-4 py-2 rounded-md border-[1px] border-red-700 text-white;
+  background-color: rgb(220, 38, 38);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: rgb(185, 28, 28);
+  color: white;
 }
 
 .markdown blockquote {
-  @apply bg-gray-300 pl-4 py-1 my-1 rounded-md border-[1px] border-gray-500;
+  background-color: rgb(209, 213, 219);
+  padding-left: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: rgb(107, 114, 128);
 }
 
 .markdown thead {
@@ -105,7 +176,7 @@
 
 .markdown thead th,
 .markdown thead td {
-  font: sans-serif;
+  font-family: sans-serif;
   font-weight: 500;
 }
 
@@ -139,13 +210,22 @@
 
 .markdown li code,
 .markdown p code {
-  @apply px-2 py-1 rounded bg-rwth-accent/10;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  border-radius: 0.25rem;
+  background-color: rgba(0, 150, 190, 0.1);
 }
 
 .markdown svg {
-  @apply ml-auto mr-auto py-2;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .markdown .centerImg {
-  @apply ml-auto mr-auto;
+  margin-left: auto;
+  margin-right: auto;
 }
