--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin '@tailwindcss/typography';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -7,11 +8,9 @@
   --font-mono: monospace;
   --font-roboto: var(--font-roboto), sans-serif;
   --font-sans:
-    Hanken Grotesk Variable, var(--font-inter), var(--font-roboto), sans-serif;
-  --font-serif: var(--font-lmserif), serif;
-  --font-lmserif: var(--font-lmserif), serif;
-  --font-lmsans:
-    var(--font-lmsans), var(--font-hk-grotesk), var(--font-inter), sans-serif;
+    var(--font-hanken_grotesk), var(--font-inter), var(--font-roboto),
+    sans-serif;
+  --font-serif: var(--font-newsreader), serif;
 
   --drop-shadow-glow:
     0 0px 20px rgba(255, 255, 255, 0.35), 0 0px 65px rgba(255, 255, 255, 0.2);
