--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -54,7 +54,14 @@
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   margin-left: 1.5rem;
+}
+
+.markdown ul {
   list-style-type: disc;
+}
+
+.markdown ol {
+  list-style-type: decimal;
 }
 
 .markdown ul > li,
