--- a/src/styles/cms.css
+++ b/src/styles/cms.css
@@ -1,7 +1,3 @@
-.cms a {
-	color: inherit;
-}
-
 .cms-interactive-top {
 	position: relative;
 }
@@ -25,7 +21,7 @@
 	top: 0px;
 	transform-origin: left;
 	transform: scaleX(0);
-	background-color: black;
+	background-color: var(--foreground);
 	transition: transform 350ms ease-out;
 }
 
@@ -63,13 +59,8 @@
 	bottom: 3px;
 	transform-origin: left;
 	transform: scaleX(0);
-	background-color: black;
+	background-color: var(--foreground);
 	transition: transform 350ms ease-out;
-}
-
-.cms .dark .cms-interactive-bottom::after,
-.cms .dark a::after {
-	background-color: white;
 }
 
 .cms-button {
@@ -81,24 +72,23 @@
 	--btn-spacer-margin: calc(var(--btn-spacer-shadow) * -1);
 
 	color: currentColor;
-	background-color: var(--color-cms-bg);
+	background-color: var(--background);
 	box-shadow:
-		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 -2px var(--color-cms-bg),
-		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 0
-		var(--color-cms-accent);
+		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 -2px var(--background),
+		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 0 var(--primary);
 
 	padding: var(--spacer-2xs) var(--spacer-s);
 	text-align: center;
-	border: 1px solid var(--color-cms-bg-text);
+	border: 1px solid var(--foreground);
 	cursor: pointer;
 	font-weight: 500;
 }
 
 .cms-button:is(:hover, :active, :focus-visible, [aria-expanded="true"]) {
-	border: 1px solid var(--color-cms-accent);
-	background-color: var(--color-cms-accent);
+	border: 1px solid var(--primary);
+	background-color: var(--primary);
+	color: var(--primary-foreground);
 	box-shadow:
-		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 -2px var(--color-cms-bg),
-		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 0
-		var(--color-cms-bg-text);
+		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 -2px var(--background),
+		var(--btn-spacer-shadow) var(--btn-spacer-shadow) 0 0 var(--foreground);
 }
